Fixed: Test Customization tab unecessary Scrollbar

--- a/testCustomization.sass
+++ b/testCustomization.sass
@@ -57,7 +57,7 @@ html
                     // .test-check
                     //     margin-right: 10%
                 .test-check-container
-                    overflow-y: scroll
+                    overflow-y: auto
                     height: 100%
                     margin-top: 5px
                     gap: 5px
